# Controled-Car-with-Obstacle-Avoidance-System

project-CarroV9 - Copia/: CMakeLists.txt  sdkconfig  sdkconfig.old
project-CarroV9 - Copia/components/: espnow_comm.7z
project-CarroV9 - Copia/components/buzzLed/: CMakeLists.txt  buzzLed.c
project-CarroV9 - Copia/components/buzzLed/include/: buzzLed.h
project-CarroV9 - Copia/components/control/: CMakeLists.txt  control.c
project-CarroV9 - Copia/components/control/include/: control.h
project-CarroV9 - Copia/components/espnow_comm/: CMakeLists.txt  espnow_comm.c
project-CarroV9 - Copia/components/espnow_comm/include/: espnow_comm.h
project-CarroV9 - Copia/components/motor/: CMakeLists.txt  motor.c
project-CarroV9 - Copia/components/motor/include/: motor.h
project-CarroV9 - Copia/components/ultrasonico/: CMakeLists.txt  ultrasonico.c
project-CarroV9 - Copia/components/ultrasonico/include/: ultrasonico.h
project-CarroV9 - Copia/main/: CMakeLists.txt  idf_component.yml  main.c
